# tdc-solana-app

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  skills-lock.json
.claude/: settings.json
.claude/agents/: README.md  implementer.md  planner.md  researcher.md  reviewer.md
.claude/skills/plan-work/: SKILL.md
.claude/skills/ship-work/: SKILL.md
.github/workflows/: pr.yml
app/: Anchor.toml  package.json
app/programs/app/: Cargo.toml
app/programs/app/src/: constants.rs  delegation.rs  error.rs  instructions.rs  lib.rs  state.rs
app/programs/app/src/instructions/: cancel.rs  charge.rs  create_plan.rs  reauthorize.rs  set_allowance.rs  set_max_amount.rs  set_plan_active.rs  subscribe.rs  update_price.rs
app/programs/app/tests/: test_initialize.rs  test_plans.rs  test_spending_caps.rs  test_subscriptions.rs  test_variable_pricing.rs
app/programs/app/tests/common/: mod.rs
docs/: engineering-guidelines.md  solana-for-web2-developers.md  solana-toolchain.md  workflow.md
docs/plans/: 0001-development-harness.md  0002-subscription-plans.md  0003-delegation-and-charging.md  0004-subscriber-spending-caps.md  0005-variable-pricing.md  0006-web-frontend.md  README.md  TEMPLATE.md
web/: .env.example  .prettierignore  README.md  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  tsconfig.tests.json
web/scripts/: codegen.mjs  reset-local-validator.sh
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/components/: ActionError.tsx  ConnectWallet.tsx  (+3 more)
web/tests/: subscriptions.spec.ts
(+7 files in other folders)
